# pkb

./: .gitignore  README.md  alembic.ini  comments.json  comments_processed.json  docker-compose.yml  env.example  foo.py  lint.bat  notes.js  package-lock.json  package.json  parse_comments.py  requirements.txt  serialised_data.json  temp.json  test.py
app/: app_logging.py  db.py  db_models.py  embed.py  exceptions.py  gist copy.md  gist.md  ingest.py  lint.py  main.py  markdown.py  models.py  pkb.code-workspace  schemas.py  snippets.py  utils.py  vector.py
data/: gist.md  gist_out.md  gist_out_sorted.md  merged_gists.json  merged_gists_schema.sql
db/: .prettierrc  Untitled-1  notes.sql  out.txt  package-lock.json  package.json  tsconfig.json
docs/: architecture-diagram.md
foo/: 1.py  2.py  (+11 more)
praseGist/: app_logging.py  check_dupes.py  exceptions.py  lint.bat  main.py  pyproject.toml  requirements.txt  snippets.py  test.json
praseGist/docs/: markdown-parsing-trace.md
praseGist/old/: classes.py  markdown.py
praseGist/prasegist/: __init__.py  praseGist.code-workspace
praseGist/prasegist/comments/: comments.json  comments.processed.json  get_comments.py  parse_comments.py  test_comments.json  test_comments.processed.json
praseGist/prasegist/gist/: get_gist.py  gist.md  gist.processed.json  markdown.py  parse_gist.py  test_gist.md  test_gist.processed.json
praseGist/prasegist/merge/: merge.py  merged_gists.json
praseGist/prasegist/rows/: blocks.csv  make_rows.py  rows.json  rows_to_csv.py  snippets.csv
praseGist/prasegist/shared/: shared.py  util.py
(+102 files in other folders)
