[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prasegist"
version = "0.1.0"
description = "Parse GitHub gists and extract snippets from markdown"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.11.0",
    "requests>=2.32.0",
    "rich>=13.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["prasegist"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
